--- a/index.html
+++ b/index.html
@@ -171,10 +171,13 @@ body { margin:20px; background:hsl(311, 68%, 99%); text-align:center; }
        </div>
   </div>
   <div class="text-container">
-   <b> <p id="head" style="font-family:Goudy Old Style">Happy Birthday Raj!</p></b>
-    <!-- <h5>Birthday Boy Muni Raj </h5> -->
+   <b> <p id="head" style="font-family:Goudy Old Style">Happy Birthday Anu <br> 💖💖</p></b>
     <b><p style="font-family:
-Comic Sans MS ,Goudy Old Style; font-size: 16px;">Happy birthday to one of the few people whose birthday I can remember without a Facebook reminder,Happy birthday macha, one of the best gifts in my life is your friendship all the time i want to see your happiness and gorgeous smile and many your joys be infinity everyday, cheers to your life ahead</p></b>
+Comic Sans MS ,Goudy Old Style; font-size: 16px;">one of the few people whose birthday I can
+            remember without a Facebook reminder, one of
+            the best gifts in my life is your friendship all the time i want to
+            see your happiness and gorgeous smile and many your joys be infinity
+            everyday,i will be always with you Anu.</p></b>
   </div>
 </div>
 
